--- a/UserSystem/src/main/resources/templates/review.html
+++ b/UserSystem/src/main/resources/templates/review.html
@@ -195,11 +195,13 @@ header {
    <header>
      <div class="controls">
   <button id="back-btn" aria-label="Go back">
-    <svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true" style="margin-right:6px; vertical-align:middle;">
-      <path fill="currentColor" d="M9.7 4.3a1 1 0 0 0-1.4 1.4L11.58 9H4a1 1 0 1 0 0 2h7.58l-3.28 3.28a1 1 0 1 0 1.44 1.4l5-5a1 1 0 0 0 0-1.4l-5-5z"/>
-    </svg>
-    Back
-  </button>
+  <svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true" style="margin-right:6px; vertical-align:middle;">
+    <path fill="currentColor" d="M15 10a1 1 0 0 1-1 1H7.41l3.3 3.3a1 1 0 0 1-1.42 1.4l-5-5a1 1 0 0 1 0-1.4l5-5a1 1 0 0 1 1.42 1.4L7.4 9H14a1 1 0 0 1 1 1z"/>
+  </svg>
+  Back
+</button>
+
+
 </div>
    </header>
 <body>
